[gd_scene load_steps=2 format=3 uid="uid://box7oebxyrgxw"]

[ext_resource type="Script" path="res://Scenes/menus/post_death_shop.gd" id="1_55rcw"]

[node name="PostDeathShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55rcw")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.5
offset_right = 136.5
offset_bottom = 49.0
grow_horizontal = 2
text = "The statue was destroyed. Too bad!
Pick an upgrade."

[node name="BuyFarm" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -487.0
offset_top = -117.0
offset_right = -308.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
text = "Buy farm building
"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 271.0
offset_right = 136.0
offset_bottom = 294.0
text = "Price:10 eternal resource"

[node name="FasterBarracks" type="Button" parent="."]
layout_mode = 0
offset_left = 399.0
offset_top = 203.0
offset_right = 628.0
offset_bottom = 262.0
text = "Make barracks 
train units faster by 10%"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 275.0
offset_right = 609.0
offset_bottom = 298.0
text = "Price:18 eternal resource"

[node name="UnlockDefTurrets" type="Button" parent="."]
layout_mode = 0
offset_left = 756.0
offset_top = 198.0
offset_right = 1031.0
offset_bottom = 262.0
text = "Unlock defence turrets"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 270.0
offset_right = 999.0
offset_bottom = 293.0
text = "Price:25 eternal resource"

[node name="UnlockBarrackUpgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 353.0
offset_right = 258.0
offset_bottom = 420.0
text = "Unlock upgrade for 
barracks"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 437.0
offset_right = 269.0
offset_bottom = 460.0
text = "Price:35 eternal resource"

[node name="IncreaseStartResource" type="Button" parent="."]
layout_mode = 0
offset_left = 386.0
offset_top = 350.0
offset_right = 632.0
offset_bottom = 423.0
text = "Increase starting resource by 4"

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 435.0
offset_right = 616.0
offset_bottom = 458.0
text = "Price:27 eternal resource"

[node name="UnlockFarmUpgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 756.0
offset_top = 351.0
offset_right = 998.0
offset_bottom = 420.0
text = "Unlock upgrade for farm"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 775.0
offset_top = 425.0
offset_right = 968.0
offset_bottom = 448.0
text = "Price:35 eternal resource"

[node name="Resources" type="Label" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 83.0
offset_right = 566.0
offset_bottom = 106.0
text = "Eternal Resources: [AMOUNT]"

[connection signal="pressed" from="BuyFarm" to="." method="_on_buy_farm_pressed"]
[connection signal="pressed" from="FasterBarracks" to="." method="_on_faster_barracks_pressed"]
[connection signal="pressed" from="UnlockDefTurrets" to="." method="_on_unlock_def_turrets_pressed"]
[connection signal="pressed" from="UnlockBarrackUpgrade" to="." method="_on_unlock_barrack_upgrade_pressed"]
[connection signal="pressed" from="IncreaseStartResource" to="." method="_on_increase_start_resource_pressed"]
[connection signal="pressed" from="UnlockFarmUpgrade" to="." method="_on_unlock_farm_upgrade_pressed"]
